--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "moment": "^2.27.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-facebook-login": "^4.1.1",
     "react-file-base64": "^1.0.3",
     "react-google-login": "^5.1.25",
     "react-redux": "^7.1.3",
