--- a/client/package.json
+++ b/client/package.json
@@ -24,7 +24,7 @@
     "react-scripts": "3.4.1",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17"
+    "tailwindcss": "npm:postcss@^8.4.8"
   },
   "scripts": {
     "start": "react-scripts --openssl-legacy-provider start",
